# building-detector

./: .env.example  .gitignore  LICENSE  README.md  building-detector.ipynb  main.py  noxfile.py  pyproject.toml  requirements.txt
UML/: class_diagram.puml  component_diagram.puml  deployment_diagram.puml  sequence_diagram.puml  use_case_diagram.puml
app/: app.py  config.py  config.py.template
local_backend/: README.md  local_server.py  requirements.txt  start_local.sh
uploads/: building_regularized.geojson  buildings_for_osm.geojson  satellite_06682604-5f5e-44c1-81e9-01eca202771d.tif  satellite_1adb2770-e552-40f6-b43f-003e1729c99b.tif  satellite_1b68e055-5072-4ba6-bf7b-1856aa42fe94.tif  satellite_1ff4e564-50a5-472b-ab4f-b94c1dec99f8.tif  satellite_29a5caee-f6b9-44fe-9e60-b6ac3d8f73d4.tif  satellite_3026c3bb-05fb-4ebf-aa76-57133640624d.tif  satellite_37600694-aeb4-4ca1-bb0c-709b230d7f13.tif  satellite_3965db67-afa3-4b01-8a78-5c1f688fa092.tif  satellite_4b03048d-ecd6-4645-94cc-b242433c0dce.tif  satellite_4b6a2b77-e6be-49a1-92f3-575322cd6bb0.tif  satellite_50eaa9ec-76b7-46c7-9ad5-e3bccb8ed9ba.tif  satellite_5fd0bd73-3f4e-420c-be56-f203282a48c4.tif  satellite_64349f2b-9c59-4840-931f-b60e578d89fa.tif  satellite_68a97d21-f8d4-40a8-bf90-07b50ef4cc90.tif  satellite_6ae17882-4e81-4c97-9433-c5860dc6fae6.tif  satellite_6b53c5f5-50a4-4189-bd9c-f9d844438457.tif  satellite_6ba384a5-b26c-4772-9f3f-59e8288ce51e.tif  satellite_72f5cb54-9210-4f87-b32c-2254f67f7225.tif  satellite_76beae79-4ab5-4f48-ad00-78c8e010e647.tif  satellite_7ce6c5a1-6ff8-42c6-ba95-36cad6baebfe.tif  (+10 more)
(+4 files in other folders)
